Fixing navbar position and table overflow.

--- a/src/app/episodes/components/episodes-table/episodes-table.component.scss
+++ b/src/app/episodes/components/episodes-table/episodes-table.component.scss
@@ -1,5 +1,5 @@
 %width {
-    width: 90%;
+    width: 100%;
 }
 
 table {
